--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,23 @@
-# Date: 01-22-2022
-
-# Minimum requirements for a plotly dash application
 Brotli==1.0.9
-click==8.0.3
+click==8.1.2
 dash==2.0.0
 dash-core-components==2.0.0
 dash-html-components==2.0.0
 dash-table==5.0.0
-Flask==2.0.2
-Flask-Compress==1.10.1
-itsdangerous==2.0.1
-Jinja2==3.0.3
-MarkupSafe==2.0.1
-plotly==5.5.0
+Flask==2.1.1
+Flask-Compress==1.11
+gunicorn==20.1.0
+importlib-metadata==4.11.3
+itsdangerous==2.1.2
+Jinja2==3.1.1
+joblib==1.1.0
+MarkupSafe==2.1.1
+numpy==1.22.3
+plotly==5.7.0
+scikit-learn==1.0.2
+scipy==1.8.0
 six==1.16.0
 tenacity==8.0.1
-Werkzeug==2.0.2
-
-# Required for deployment on Heroku
-gunicorn==20.1.0
+threadpoolctl==3.1.0
+Werkzeug==2.0.0
+zipp==3.8.0
